fix new version

--- a/elite-3.html
+++ b/elite-3.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belgian Malinois Trained Dogs For Sale | German Shepherd Puppies</title>
+    <title>Elite 3 Protector | Elite K9 Group</title>
     <meta name="description"
-        content="Trained Belgian Malinois dogs for sale and German Shepherd puppies for sale in Los Angeles CA. Find your perfect trained malinois dogs for sale here.">
+        content="Elite 3 Protector – The Apex Executive Guardian. Elite K9 Group offers professional dog training and protection.">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="manifest" href="site.webmanifest" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
@@ -22,14 +22,23 @@
     <!-- Navigation -->
     <nav class="navbar-new">
         <div class="container navbar-container">
+            <!-- Logo Section -->
             <a href="index.html" class="logo-new">
                 <img src="assets/images/logo-k9-new-v02.png" alt="Elite K9 Group Logo" class="logo-image">
             </a>
+
+            <!-- Navigation Links -->
             <ul class="nav-links-new">
                 <li><a href="index.html">Home</a></li>
-                <li class="has-dropdown"><a href="training.html">Training</a></li>
-                <li class="has-dropdown"><a href="services.html">Services</a></li>
-                <li class="has-dropdown"><a href="available-dogs.html" class="active">Dogs For Sale</a></li>
+                <li class="has-dropdown">
+                    <a href="training.html" class="active">Training</a>
+                </li>
+                <li class="has-dropdown">
+                    <a href="services.html">Services</a>
+                </li>
+                <li class="has-dropdown">
+                    <a href="available-dogs.html">Dogs For Sale</a>
+                </li>
                 <li><a href="future-breeding.html">Future Breeding</a></li>
                 <li><a href="blog.html">Blogs</a></li>
                 <li class="mobile-menu-footer">
@@ -53,7 +62,10 @@
                     </a>
                 </li>
             </ul>
+
+            <!-- Right Section: Social Icons & Phone -->
             <div class="navbar-right">
+                <!-- Language Switcher -->
                 <div class="language-switcher">
                     <a href="#" class="lang-btn active" data-lang="en">EN</a>
                     <span class="lang-divider">|</span>
@@ -69,6 +81,7 @@
                     <a href="https://www.instagram.com/elite_k9_group/" target="_blank" aria-label="Instagram"><i
                             class="fab fa-instagram"></i></a>
                 </div>
+
                 <div class="navbar-phone-wrapper">
                     <a href="tel:+18183573797" class="phone-number-nav">
                         <i class="fas fa-phone-alt"></i>
@@ -80,6 +93,8 @@
                     </a>
                 </div>
             </div>
+
+            <!-- Mobile Hamburger -->
             <div class="hamburger">
                 <span></span>
                 <span></span>
@@ -88,111 +103,42 @@
         </div>
     </nav>
 
-    <header class="page-header text-center">
-        <div class="container">
-            <h1>Trained Belgian Malinois & German Shepherds For Sale</h1>
-            <p>From female German shepherd puppies to fully trained Belgian Malinois service dogs.</p>
+    <!-- Header -->
+    <header class="page-header" style="padding-top: 150px; padding-bottom: 80px;">
+        <div class="container text-center">
+            <h1>Elite 3 Protector</h1>
+            <p class="lead" style="font-size: 1.5rem; color: var(--text-color);">The Apex Executive Guardian</p>
         </div>
     </header>
 
-    <div class="container">
-        <!-- Filter Tabs -->
-        <div class="filter-tabs text-center">
-            <button class="filter-btn active" data-filter="all">All Dogs</button>
-            <button class="filter-btn" data-filter="puppy">Puppies</button>
-            <button class="filter-btn" data-filter="young">Young Adults</button>
-            <button class="filter-btn" data-filter="trained">Fully Trained</button>
+    <!-- Elite Content -->
+    <section class="section-padding bg-light">
+        <div class="container" style="max-width: 900px; background: white; padding: 50px; border-radius: 12px; box-shadow: var(--shadow);">
+            <div class="text-center mb-4">
+                <h2 style="color: var(--dark-red); font-size: 2.5rem; margin-bottom: 10px;">$75,000</h2>
+                <p>A premier package designed to build the foundation of communication and protection.</p>
+            </div>
+            <h3 style="margin-bottom: 20px;">Program Includes:</h3>
+            <ul class="check-list" style="font-size: 1.1rem; display: flex; flex-direction: column;">
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Flawless On- & Off-Leash Mastery:</strong> Perfect obedience and complete control, no matter the situation.</div></li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Seamless Environmental Adaptation:</strong> Engineered to remain completely cool, calm, and collected across any environment—from private estates and bustling urban centers to first-class travel.</div></li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Core Confidence Conditioning:</strong> Unshakeable self-assurance programmed to handle the unpredictability of the real world.</div></li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Advanced Tactical Protection:</strong> Precision defense commands including send-to-intercept, instant verbal recall, tactical call-off, and forward down.</div></li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Commanded Area Denial:</strong> Strategic on-cue "guard and bark" activation to secure your perimeter instantly.</div></li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Extreme Threat Conditioning:</strong> Hardened response protocols for ultra-high-risk scenarios, including anti-carjacking, anti-kidnapping, and ambush defense.</div></li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Autonomous Threat Assessment:</strong> Elite-level instinct cultivation allowing your Guardian to independently read, evaluate, and neutralize threats with surgical precision—often responding before a command is even given.</div></li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Strategic Deterrence & De-escalation:</strong> Psychological dominance and a commanding presence designed to stop threats in their tracks through calculated posturing, avoiding physical contact whenever possible.</div></li>
+            </ul>
+            <div class="text-center" style="margin-top: 50px;">
+                <a href="consultation.html" class="btn-primary" style="font-size: 1.2rem; padding: 15px 40px; border-radius: 50px;">Request Information</a>
+            </div>
         </div>
-
-        <!-- Dogs Grid -->
-        <div class="dogs-grid" id="dogs-container">
-
-            <!-- Dog 1: Trained -->
-            <div class="dog-card reveal reveal-fade-up" data-category="trained">
-                <div class="dog-image" style="background-image: url('assets/images/rex-1.jpg')">
-                    <span class="status-badge available">Available</span>
-                </div>
-                <div class="dog-details">
-                    <h3>Rex - Trained Protection Dog</h3>
-                    <p class="breed">German Shepherd</p>
-                    <div class="dog-specs">
-                        <span><i class="fas fa-venus-mars"></i> Male</span>
-                        <span><i class="fas fa-birthday-cake"></i> 2 Years</span>
-                    </div>
-                    <p class="description">Fully trained family protection dog. Excellent with children. One of our best
-                        trained malinois dogs for sale alternatives (GSD).</p>
-                    <a href="dog-profile.html?id=rex" class="btn-secondary full-width btn-shine">View Profile</a>
-                </div>
-            </div>
-
-            <!-- Dog 2: Puppy -->
-            <div class="dog-card reveal reveal-fade-up" style="transition-delay: 0.2s;" data-category="puppy">
-                <div class="dog-image" style="background-image: url('assets/images/malinu.jpg')">
-                    <span class="status-badge available">Available</span>
-                </div>
-                <div class="dog-details">
-                    <h3>Bella - Female German Shepherd / Malinois</h3>
-                    <p class="breed">Belgian Malinois</p>
-                    <div class="dog-specs">
-                        <span><i class="fas fa-venus-mars"></i> Female</span>
-                        <span><i class="fas fa-birthday-cake"></i> 10 Weeks</span>
-                    </div>
-                    <p class="description">High potential female German shepherd / Malinois mix. Perfect to start "for
-                        your K9" journey. Socialized puppy.</p>
-                    <a href="dog-profile.html?id=bella" class="btn-secondary full-width btn-shine">View Profile</a>
-                </div>
-            </div>
-
-            <!-- Dog 3: Young Adult -->
-            <div class="dog-card reveal reveal-fade-up" style="transition-delay: 0.4s;" data-category="young">
-                <div class="dog-image" style="background-image: url('assets/images/dutch.jpg')">
-                    <span class="status-badge available">Available</span>
-                </div>
-                <div class="dog-details">
-                    <h3>Max - Started K9 Solutions</h3>
-                    <p class="breed">Dutch Shepherd</p>
-                    <div class="dog-specs">
-                        <span><i class="fas fa-venus-mars"></i> Male</span>
-                        <span><i class="fas fa-birthday-cake"></i> 1 Year</span>
-                    </div>
-                    <p class="description">Started in obedience and bite work. Top tier K9 solutions candidate.
-                        Currently under contract.</p>
-                    <a href="dog-profile.html?id=max" class="btn-secondary full-width btn-shine">View Profile</a>
-                </div>
-            </div>
-
-            <!-- Dog 4: Trained -->
-            <div class="dog-card reveal reveal-fade-up" style="transition-delay: 0.6s;" data-category="trained">
-                <div class="dog-image" style="background-image: url('assets/images/doberman.jpg')">
-                    <span class="status-badge available">Available</span>
-                </div>
-                <div class="dog-details">
-                    <h3>Luna - Trained Companion</h3>
-                    <p class="breed">Doberman</p>
-                    <div class="dog-specs">
-                        <span><i class="fas fa-venus-mars"></i> Female</span>
-                        <span><i class="fas fa-birthday-cake"></i> 3 Years</span>
-                    </div>
-                    <p class="description">Elegant, loyal, and fiercely protective. Similar drive to our Belgian
-                        Malinois service dog candidates.</p>
-                    <a href="dog-profile.html?id=luna" class="btn-secondary full-width">View Profile</a>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="bloodline-info text-center mt-5 mb-5 reveal reveal-fade-up">
-            <p style="font-size: 1.1rem; color: #555; max-width: 800px; margin: 0 auto;">
-                If you want to verify your future dog's working bloodlines, you can do so at
-                <a href="https://www.bloedlijnen.nl" target="_blank"
-                    style="color: var(--primary-orange); font-weight: 600; text-decoration: underline;">bloedlijnen.nl</a>
-            </p>
-        </div>
-    </div>
+    </section>
 
     <!-- Footer -->
     <footer id="contact" class="footer-new">
         <div class="container footer-grid">
+            <!-- Column 1: Logo + Contact Info -->
             <div class="footer-brand">
                 <a href="index.html" class="footer-logo">
                     <img src="assets/images/logo-k9-new-v02.png" alt="Elite K9 Group Logo" class="footer-logo-image">
@@ -219,6 +165,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Column 2: Navigation Links -->
             <div class="footer-nav">
                 <h4>Quick Links</h4>
                 <ul>
@@ -230,6 +178,8 @@
                     <li><a href="blog.html">Blogs</a></li>
                 </ul>
             </div>
+
+            <!-- Column 3: Service Areas / Locations -->
             <div class="footer-locations">
                 <h4>Service Areas</h4>
                 <div class="locations-grid">
@@ -249,6 +199,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer Bottom -->
         <div class="footer-bottom">
             <div class="container">
                 <p>&copy; 2026 Elite K9 Group. All rights reserved.</p>
@@ -308,30 +260,6 @@
     </div>
     <script src="voice-ai.js"></script>
     <script src="script.js"></script>
-    <script>
-        // Simple filtering script
-        const filterBtns = document.querySelectorAll('.filter-btn');
-        const dogCards = document.querySelectorAll('.dog-card');
-
-        filterBtns.forEach(btn => {
-            btn.addEventListener('click', () => {
-                // Remove active class from all buttons
-                filterBtns.forEach(b => b.classList.remove('active'));
-                // Add active class to clicked button
-                btn.classList.add('active');
-
-                const filter = btn.getAttribute('data-filter');
-
-                dogCards.forEach(card => {
-                    if (filter === 'all' || card.getAttribute('data-category') === filter) {
-                        card.style.display = 'block';
-                    } else {
-                        card.style.display = 'none';
-                    }
-                });
-            });
-        });
-    </script>
 </body>
 
 </html>
