--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -54,119 +54,6 @@
         .blog-text-content strong {
             color: #222;
         }
-
-        /* Floating Phone Button Styles (Copied) */
-        .float-phone-btn {
-            position: fixed;
-            bottom: 30px;
-            right: 30px;
-            width: 75px;
-            height: 75px;
-            background: linear-gradient(135deg, #25d366, #128C7E);
-            color: #fff;
-            border-radius: 50%;
-            text-align: center;
-            font-size: 30px;
-            box-shadow: 0 4px 20px rgba(37, 211, 102, 0.6);
-            z-index: 9999;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-decoration: none;
-            transition: all 0.3s ease;
-            animation: pulse-green 2s infinite;
-        }
-
-        .float-phone-btn:hover {
-            transform: scale(1.1);
-            box-shadow: 0 8px 25px rgba(37, 211, 102, 0.8);
-        }
-
-        .float-phone-btn i {
-            animation: shake-phone 3s infinite;
-        }
-
-        .btn-text {
-            position: absolute;
-            right: 85px;
-            /* Position to the left */
-            background: white;
-            color: #333;
-            padding: 10px 18px;
-            border-radius: 25px;
-            /* Bubble shape */
-            font-size: 15px;
-            font-weight: bold;
-            white-space: nowrap;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
-
-            /* Hidden by default with transform for pop effect */
-            opacity: 0;
-            visibility: hidden;
-            transform: translateX(20px) scale(0.5);
-            transform-origin: right center;
-            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            /* Bouncy transition */
-            pointer-events: none;
-        }
-
-        /* Show on hover */
-        .float-phone-btn:hover .btn-text {
-            opacity: 1;
-            visibility: visible;
-            transform: translateX(0) scale(1);
-        }
-
-        /* Bubble Arrow */
-        .btn-text::after {
-            content: '';
-            position: absolute;
-            right: -8px;
-            top: 50%;
-            transform: translateY(-50%);
-            border-top: 8px solid transparent;
-            border-bottom: 8px solid transparent;
-            border-left: 9px solid white;
-        }
-
-        @keyframes pulse-green {
-            0% {
-                box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7);
-            }
-
-            70% {
-                box-shadow: 0 0 0 20px rgba(37, 211, 102, 0);
-            }
-
-            100% {
-                box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
-            }
-        }
-
-        @keyframes shake-phone {
-
-            0%,
-            90%,
-            100% {
-                transform: rotate(0deg);
-            }
-
-            92% {
-                transform: rotate(10deg);
-            }
-
-            94% {
-                transform: rotate(-10deg);
-            }
-
-            96% {
-                transform: rotate(10deg);
-            }
-
-            98% {
-                transform: rotate(-10deg);
-            }
-        }
     </style>
 </head>
 
@@ -191,10 +78,16 @@
                         <span class="lang-divider">|</span>
                         <a href="#" class="lang-btn" data-lang="es">ES</a>
                     </div>
-                    <a href="tel:+18183573797" class="phone-number-nav">
-                        <i class="fas fa-phone-alt"></i>
-                        <span>818-357-3797</span>
-                    </a>
+                    <div class="navbar-phone-wrapper">
+                        <a href="tel:+18183573797" class="phone-number-nav">
+                            <i class="fas fa-phone-alt"></i>
+                            818-357-3797 <span>Voskan</span>
+                        </a>
+                        <a href="tel:+14244246444" class="phone-number-nav">
+                            <i class="fas fa-phone-alt"></i>
+                            424-424-6444 <span>Simon</span>
+                        </a>
+                    </div>
                     <a href="consultation.html" class="btn-primary btn-pulse-orange btn-nav-cta">
                         Book a Free Consult
                     </a>
@@ -216,10 +109,16 @@
                     <a href="https://www.instagram.com/elite_k9_group/" target="_blank" aria-label="Instagram"><i
                             class="fab fa-instagram"></i></a>
                 </div>
-                <a href="tel:+18183573797" class="phone-number-nav">
-                    <i class="fas fa-phone-alt"></i>
-                    <span>818-357-3797</span>
-                </a>
+                <div class="navbar-phone-wrapper">
+                    <a href="tel:+18183573797" class="phone-number-nav">
+                        <i class="fas fa-phone-alt"></i>
+                        818-357-3797 <span>Voskan</span>
+                    </a>
+                    <a href="tel:+14244246444" class="phone-number-nav">
+                        <i class="fas fa-phone-alt"></i>
+                        424-424-6444 <span>Simon</span>
+                    </a>
+                </div>
             </div>
             <div class="hamburger">
                 <span></span>
@@ -296,10 +195,13 @@
                     <img src="assets/images/logo-k9-new-v02.png" alt="Elite K9 Group Logo" class="footer-logo-image">
                 </a>
                 <div class="footer-contact-info">
-                    <a href="tel:+18183573797" class="footer-contact-item">
+                    <div class="footer-contact-item">
                         <i class="fas fa-phone-alt"></i>
-                        <span>818-357-3797</span>
-                    </a>
+                        <div class="phone-links">
+                            <a href="tel:+18183573797">818-357-3797 <span>Voskan</span></a>
+                            <a href="tel:+14244246444">424-424-6444 <span>Simon</span></a>
+                        </div>
+                    </div>
                     <a href="mailto:info@elitek9group.com" class="footer-contact-item">
                         <i class="fas fa-envelope"></i>
                         <span>info@elitek9group.com</span>
@@ -352,10 +254,44 @@
     </footer>
 
     <!-- Floating Phone Button -->
-    <a href="tel:+18183573797" class="float-phone-btn" aria-label="Call Now">
+    <a href="#" class="float-phone-btn" aria-label="Call Now" id="floatPhoneBtn">
         <i class="fas fa-phone-alt"></i>
-        <span class="btn-text">Call Us Now</span>
+        <span class="btn-text">Call Us Now!</span>
     </a>
+
+    <!-- Phone Modal -->
+    <div id="phoneModal" class="modal-phone">
+        <div class="modal-phone-content">
+            <span class="close-modal">&times;</span>
+            <div class="modal-phone-header">
+                <i class="fas fa-phone-alt"></i>
+                <h3>Choose a Trainer</h3>
+            </div>
+            <div class="trainer-links">
+                <a href="tel:+18183573797" class="trainer-call-btn">
+                    <div class="trainer-info">
+                        <span class="trainer-name">Voskan</span>
+                        <span class="trainer-number">818-357-3797</span>
+                    </div>
+                    <i class="fas fa-chevron-right"></i>
+                </a>
+                <a href="tel:+14244246444" class="trainer-call-btn">
+                    <div class="trainer-info">
+                        <span class="trainer-name">Simon</span>
+                        <span class="trainer-number">424-424-6444</span>
+                    </div>
+                    <i class="fas fa-chevron-right"></i>
+                </a>
+            </div>
+            <div class="modal-phone-hours">
+                <p>Please call us during these hours:</p>
+                <div class="hours-grid">
+                    <span>Mon - Fri:</span> <span>9am - 5pm</span>
+                    <span>Sat - Sun:</span> <span>9am - 4pm</span>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Voice AI -->
     <button id="voiceBtn" aria-label="Talk to AI">
