--- a/index.html
+++ b/index.html
@@ -60,10 +60,16 @@
                         <span class="lang-divider">|</span>
                         <a href="#" class="lang-btn" data-lang="es">ES</a>
                     </div>
-                    <a href="tel:+18183573797" class="phone-number-nav">
-                        <i class="fas fa-phone-alt"></i>
-                        <span>818-357-3797</span>
-                    </a>
+                    <div class="navbar-phone-wrapper">
+                        <a href="tel:+18183573797" class="phone-number-nav">
+                            <i class="fas fa-phone-alt"></i>
+                            818-357-3797 <span>Voskan</span>
+                        </a>
+                        <a href="tel:+14244246444" class="phone-number-nav">
+                            <i class="fas fa-phone-alt"></i>
+                            424-424-6444 <span>Simon</span>
+                        </a>
+                    </div>
                     <a href="consultation.html" class="btn-primary btn-pulse-orange btn-nav-cta">
                         Book a Free Consult
                     </a>
@@ -90,10 +96,16 @@
                     <a href="https://www.instagram.com/elite_k9_group/" target="_blank" aria-label="Instagram"><i
                             class="fab fa-instagram"></i></a>
                 </div>
-                <a href="tel:+18183573797" class="phone-number-nav">
-                    <i class="fas fa-phone-alt"></i>
-                    <span>818-357-3797</span>
-                </a>
+                <div class="navbar-phone-wrapper">
+                    <a href="tel:+18183573797" class="phone-number-nav">
+                        <i class="fas fa-phone-alt"></i>
+                        818-357-3797 <span>Voskan</span>
+                    </a>
+                    <a href="tel:+14244246444" class="phone-number-nav">
+                        <i class="fas fa-phone-alt"></i>
+                        424-424-6444 <span>Simon</span>
+                    </a>
+                </div>
             </div>
 
             <!-- Mobile Hamburger -->
@@ -440,9 +452,9 @@
                     <div class="program-overlay"></div>
                     <div class="program-content">
                         <i class="fas fa-shield-alt program-icon"></i>
-                        <h3>Aggression Rehab Specialist</h3>
-                        <p>Don't give up on your dog. Our training for aggressive dogs turns fear into focus and
-                            reactivity into respect.</p>
+                        <h3>Protection Dog Training</h3>
+                        <p>Serious training for real-world protection. We develop confident, controlled protection dogs
+                            with clear obedience, strong nerve, and reliable performance you can trust.</p>
                         <span class="btn-pill">Get Help Now</span>
                     </div>
                 </a>
@@ -457,9 +469,9 @@
                     <div class="program-overlay"></div>
                     <div class="program-content">
                         <i class="fas fa-paw program-icon"></i>
-                        <h3>Service Dog Excellence</h3>
-                        <p>Unlock your dog's potential. From anxiety service dog training to confidence building, we
-                            create life-changing partners.</p>
+                        <h3>Puppy Training Program</h3>
+                        <p>Build the perfect foundation from day one. Our puppy training focuses on socialization, basic
+                            obedience, confidence building, and healthy behavior that lasts a lifetime.</p>
                         <span class="btn-pill">Discover More</span>
                     </div>
                 </a>
@@ -659,10 +671,13 @@
                             class="footer-logo-image">
                     </a>
                     <div class="footer-contact-info">
-                        <a href="tel:+18183573797" class="footer-contact-item">
+                        <div class="footer-contact-item">
                             <i class="fas fa-phone-alt"></i>
-                            <span>818-357-3797</span>
-                        </a>
+                            <div class="phone-links">
+                                <a href="tel:+18183573797">818-357-3797 <span>Voskan</span></a>
+                                <a href="tel:+14244246444">424-424-6444 <span>Simon</span></a>
+                            </div>
+                        </div>
                         <a href="mailto:info@elitek9group.com" class="footer-contact-item">
                             <i class="fas fa-envelope"></i>
                             <span>info@elitek9group.com</span>
@@ -688,6 +703,7 @@
                         <li><a href="available-dogs.html">Dogs for Sale</a></li>
                         <li><a href="future-breeding.html">Future Breeding</a></li>
                         <li><a href="blog.html">Blogs</a></li>
+                        <li><a href="training.html#our-team">Perfect duo</a></li>
                     </ul>
                 </div>
 
@@ -721,10 +737,44 @@
         </footer>
 
         <!-- Floating Phone Button -->
-        <a href="tel:+18183573797" class="float-phone-btn" aria-label="Call Now">
+        <a href="#" class="float-phone-btn" aria-label="Call Us Now! We are trainers" id="floatPhoneBtn">
             <i class="fas fa-phone-alt"></i>
-            <span class="btn-text">Call Us Now!</span>
+            <span class="btn-text">Call Us Now!<br>We are trainers</span>
         </a>
+
+        <!-- Phone Modal -->
+        <div id="phoneModal" class="modal-phone">
+            <div class="modal-phone-content">
+                <span class="close-modal">&times;</span>
+                <div class="modal-phone-header">
+                    <i class="fas fa-phone-alt"></i>
+                    <h3>Choose a Trainer</h3>
+                </div>
+                <div class="trainer-links">
+                    <a href="tel:+18183573797" class="trainer-call-btn">
+                        <div class="trainer-info">
+                            <span class="trainer-name">Voskan</span>
+                            <span class="trainer-number">818-357-3797</span>
+                        </div>
+                        <i class="fas fa-chevron-right"></i>
+                    </a>
+                    <a href="tel:+14244246444" class="trainer-call-btn">
+                        <div class="trainer-info">
+                            <span class="trainer-name">Simon</span>
+                            <span class="trainer-number">424-424-6444</span>
+                        </div>
+                        <i class="fas fa-chevron-right"></i>
+                    </a>
+                </div>
+                <div class="modal-phone-hours">
+                    <p>Please call us during these hours:</p>
+                    <div class="hours-grid">
+                        <span>Mon - Fri:</span> <span>9am - 5pm</span>
+                        <span>Sat - Sun:</span> <span>9am - 4pm</span>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- Voice AI -->
         <button id="voiceBtn" aria-label="Talk to AI">
