--- a/training.html
+++ b/training.html
@@ -47,10 +47,16 @@
                         <span class="lang-divider">|</span>
                         <a href="#" class="lang-btn" data-lang="es">ES</a>
                     </div>
-                    <a href="tel:+18183573797" class="phone-number-nav">
-                        <i class="fas fa-phone-alt"></i>
-                        <span>818-357-3797</span>
-                    </a>
+                    <div class="navbar-phone-wrapper">
+                        <a href="tel:+18183573797" class="phone-number-nav">
+                            <i class="fas fa-phone-alt"></i>
+                            818-357-3797 <span>Voskan</span>
+                        </a>
+                        <a href="tel:+14244246444" class="phone-number-nav">
+                            <i class="fas fa-phone-alt"></i>
+                            424-424-6444 <span>Simon</span>
+                        </a>
+                    </div>
                     <a href="consultation.html" class="btn-primary btn-pulse-orange btn-nav-cta">
                         Book a Free Consult
                     </a>
@@ -76,10 +82,16 @@
                             class="fab fa-instagram"></i></a>
                 </div>
 
-                <a href="tel:+18183573797" class="phone-number-nav">
-                    <i class="fas fa-phone-alt"></i>
-                    <span>818-357-3797</span>
-                </a>
+                <div class="navbar-phone-wrapper">
+                    <a href="tel:+18183573797" class="phone-number-nav">
+                        <i class="fas fa-phone-alt"></i>
+                        818-357-3797 <span>Voskan</span>
+                    </a>
+                    <a href="tel:+14244246444" class="phone-number-nav">
+                        <i class="fas fa-phone-alt"></i>
+                        424-424-6444 <span>Simon</span>
+                    </a>
+                </div>
             </div>
 
             <!-- Mobile Hamburger -->
@@ -168,31 +180,66 @@
         </div>
     </section>
 
-    <!-- Behavior Correction -->
-    <section id="behavior" class="training-section section-padding">
+    <!-- Training Level Packages -->
+    <section id="packages" class="training-section section-padding bg-pattern">
         <div class="container">
             <div class="text-center mb-4">
-                <h2>Behavior Modification</h2>
-                <p>Turning problem behaviors into peaceful coexistence.</p>
+                <h2>Choose among our training-level packages</h2>
+                <p>Elite K9 Group has professional dog trainers dedicated to working at different learning stages.</p>
             </div>
-            <div class="grid-3">
-                <div class="card reveal reveal-fade-up premium-hover">
-                    <i class="fas fa-user-slash icon-large"></i>
-                    <h3>Aggression & Reactivity</h3>
-                    <p>We rehabilitate dogs that react to other dogs, people, or movement. We teach them to remain calm
-                        and look to you for guidance.</p>
+            <div class="packages-grid">
+                <!-- Card 1 -->
+                <div class="package-card reveal reveal-fade-up">
+                    <div class="package-icon-wrapper">
+                        <i class="fas fa-dog fa-flip-horizontal fa-lg"></i>
+                    </div>
+                    <h3>Behavioral Modification</h3>
+                    <p>We work with your dog to correct any behavioral issues, ranging from territoriality, fear,
+                        barking, lunging at cars, jumping, plus much more!</p>
+                    <a href="services.html#behavior-booking" class="btn-learn-more">Learn more</a>
                 </div>
-                <div class="card reveal reveal-fade-up premium-hover" style="transition-delay: 0.2s;">
-                    <i class="fas fa-wind icon-large"></i>
-                    <h3>Anxiety Service Dog Training</h3>
-                    <p>Building confidence in shy dogs through our confidence building for dogs program. Expert anxiety
-                        service dog training to reduce fear.</p>
+                <!-- Card 2 -->
+                <div class="package-card reveal reveal-fade-up" style="transition-delay: 0.1s;">
+                    <div class="package-icon-wrapper">
+                        <i class="fas fa-dog"></i>
+                    </div>
+                    <h3>Obedience</h3>
+                    <p>To earn a Elite 0, your dog will learn a specific set of obedience commands and do them in
+                        routine, on-leash, and with precision.</p>
+                    <a href="services.html#obedience-booking" class="btn-learn-more">Learn more</a>
                 </div>
-                <div class="card reveal reveal-fade-up premium-hover" style="transition-delay: 0.4s;">
-                    <i class="fas fa-dog icon-large"></i>
-                    <h3>Leash Pulling & Manners</h3>
-                    <p>Stop the struggle on walks. We teach loose-leash walking and polite greetings without jumping.
-                    </p>
+                <!-- Card 3 -->
+                <div class="package-card reveal reveal-fade-up" style="transition-delay: 0.2s;">
+                    <div class="package-icon-wrapper">
+                        <i class="fas fa-paw"></i>
+                    </div>
+                    <h3>Elite 1</h3>
+                    <h4>K9 Training</h4>
+                    <p>To earn a Elite 1, your dog will learn a specific set of obedience commands and do them in
+                        routine, on-leash, and with precision.</p>
+                    <a href="elite-1.html" class="btn-learn-more">Learn more</a>
+                </div>
+                <!-- Card 4 -->
+                <div class="package-card reveal reveal-fade-up" style="transition-delay: 0.3s;">
+                    <div class="package-icon-wrapper">
+                        <i class="fas fa-shield-dog"></i>
+                    </div>
+                    <h3>Elite 2</h3>
+                    <h4>Protection Training</h4>
+                    <p>To earn Elite 2, your dog must have passed the latter phases and is now able to bite on command
+                        and release on command.</p>
+                    <a href="elite-2.html" class="btn-learn-more">Learn more</a>
+                </div>
+                <!-- Card 5 -->
+                <div class="package-card reveal reveal-fade-up" style="transition-delay: 0.4s;">
+                    <div class="package-icon-wrapper">
+                        <i class="fas fa-bolt"></i>
+                    </div>
+                    <h3>Elite 3</h3>
+                    <h4>Advanced Training</h4>
+                    <p>To reach Elite 3, your dog must have passed the latter phases and is now able to do all commands
+                        (obedience & protection) while off-leash.</p>
+                    <a href="elite-3.html" class="btn-learn-more">Learn more</a>
                 </div>
             </div>
         </div>
@@ -236,6 +283,31 @@
         </div>
     </section>
 
+    <!-- Our Team -->
+    <section id="our-team" class="section-padding team-section bg-light">
+        <div class="container">
+            <div class="text-center mb-4">
+                <h2>Our Team</h2>
+                <p>Expert trainers dedicated to bringing out the best in your K9 partner.</p>
+            </div>
+            <div class="team-gallery">
+                <div class="gallery-item reveal reveal-fade-up">
+                    <img src="assets/images/team-1.jpg" alt="Our Team at Shot Show">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.1s;">
+                    <img src="assets/images/team-2.jpg" alt="K9 Dog resting">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.2s;">
+                    <img src="assets/images/team-3.jpg" alt="K9 Dog resting">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.3s;">
+                    <img src="assets/images/team-4.jpg" alt="Trainer with K9 Dog">
+                </div>
+
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer id="contact" class="footer-new">
         <div class="container footer-grid">
@@ -245,10 +317,13 @@
                     <img src="assets/images/logo-k9-new-v02.png" alt="Elite K9 Group Logo" class="footer-logo-image">
                 </a>
                 <div class="footer-contact-info">
-                    <a href="tel:+18183573797" class="footer-contact-item">
+                    <div class="footer-contact-item">
                         <i class="fas fa-phone-alt"></i>
-                        <span>818-357-3797</span>
-                    </a>
+                        <div class="phone-links">
+                            <a href="tel:+18183573797">818-357-3797 <span>Voskan</span></a>
+                            <a href="tel:+14244246444">424-424-6444 <span>Simon</span></a>
+                        </div>
+                    </div>
                     <a href="mailto:info@elitek9group.com" class="footer-contact-item">
                         <i class="fas fa-envelope"></i>
                         <span>info@elitek9group.com</span>
@@ -307,124 +382,43 @@
     </footer>
 
     <!-- Floating Phone Button -->
-    <a href="tel:+18183573797" class="float-phone-btn" aria-label="Call Now">
+    <a href="#" class="float-phone-btn" aria-label="Call Now" id="floatPhoneBtn">
         <i class="fas fa-phone-alt"></i>
-        <span class="btn-text">Call Us Now</span>
+        <span class="btn-text">Call Us Now!</span>
     </a>
-
-    <style>
-        .float-phone-btn {
-            position: fixed;
-            bottom: 30px;
-            right: 30px;
-            width: 75px;
-            height: 75px;
-            background: linear-gradient(135deg, #25d366, #128C7E);
-            color: #fff;
-            border-radius: 50%;
-            text-align: center;
-            font-size: 30px;
-            box-shadow: 0 4px 20px rgba(37, 211, 102, 0.6);
-            z-index: 9999;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-decoration: none;
-            transition: all 0.3s ease;
-            animation: pulse-green 2s infinite;
-        }
-
-        .float-phone-btn:hover {
-            transform: scale(1.1);
-            box-shadow: 0 8px 25px rgba(37, 211, 102, 0.8);
-        }
-
-        .float-phone-btn i {
-            animation: shake-phone 3s infinite;
-        }
-
-        .btn-text {
-            position: absolute;
-            right: 85px;
-            /* Position to the left */
-            background: white;
-            color: #333;
-            padding: 10px 18px;
-            border-radius: 25px;
-            /* Bubble shape */
-            font-size: 15px;
-            font-weight: bold;
-            white-space: nowrap;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
-
-            /* Hidden by default with transform for pop effect */
-            opacity: 0;
-            visibility: hidden;
-            transform: translateX(20px) scale(0.5);
-            transform-origin: right center;
-            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            /* Bouncy transition */
-            pointer-events: none;
-        }
-
-        /* Show on hover */
-        .float-phone-btn:hover .btn-text {
-            opacity: 1;
-            visibility: visible;
-            transform: translateX(0) scale(1);
-        }
-
-        /* Bubble Arrow */
-        .btn-text::after {
-            content: '';
-            position: absolute;
-            right: -8px;
-            top: 50%;
-            transform: translateY(-50%);
-            border-top: 8px solid transparent;
-            border-bottom: 8px solid transparent;
-            border-left: 9px solid white;
-        }
-
-        @keyframes pulse-green {
-            0% {
-                box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7);
-            }
-
-            70% {
-                box-shadow: 0 0 0 20px rgba(37, 211, 102, 0);
-            }
-
-            100% {
-                box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
-            }
-        }
-
-        @keyframes shake-phone {
-
-            0%,
-            90%,
-            100% {
-                transform: rotate(0deg);
-            }
-
-            92% {
-                transform: rotate(10deg);
-            }
-
-            94% {
-                transform: rotate(-10deg);
-            }
-
-            96% {
-                transform: rotate(10deg);
-            }
-
-            98% {
-                transform: rotate(-10deg);
-            }
-        }
-    </style>
+    <!-- Phone Modal -->
+    <div id="phoneModal" class="modal-phone">
+        <div class="modal-phone-content">
+            <span class="close-modal">&times;</span>
+            <div class="modal-phone-header">
+                <i class="fas fa-phone-alt"></i>
+                <h3>Choose a Trainer</h3>
+            </div>
+            <div class="trainer-links">
+                <a href="tel:+18183573797" class="trainer-call-btn">
+                    <div class="trainer-info">
+                        <span class="trainer-name">Voskan</span>
+                        <span class="trainer-number">818-357-3797</span>
+                    </div>
+                    <i class="fas fa-chevron-right"></i>
+                </a>
+                <a href="tel:+14244246444" class="trainer-call-btn">
+                    <div class="trainer-info">
+                        <span class="trainer-name">Simon</span>
+                        <span class="trainer-number">424-424-6444</span>
+                    </div>
+                    <i class="fas fa-chevron-right"></i>
+                </a>
+            </div>
+            <div class="modal-phone-hours">
+                <p>Please call us during these hours:</p>
+                <div class="hours-grid">
+                    <span>Mon - Fri:</span> <span>9am - 5pm</span>
+                    <span>Sat - Sun:</span> <span>9am - 4pm</span>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Voice AI -->
     <button id="voiceBtn" aria-label="Talk to AI">
